semi working backward navigation

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -4,14 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/output.css" />
-    <script src="/js/visitedPages.js" defer></script>
     <script src="/js/fadeAnimations.js" defer></script>
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/toggleCommentBox.js" defer></script>
     <script src="/js/triggerComment.js" defer></script>
     <script src="/js/sinceCreated.js" defer></script>
     <script src="/js/commentBoxOpen.js"></script>
-    <script src="/js/backButton.js"></script>
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
+
+
   </head>
   <body id="scrollablePage">
     <header>
