--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -4,13 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" th:href="@{/css/output.css}" />
-    <script src="/js/visitedPages.js" defer></script>
+
     <script th:src="@{/js/accountDetails.js}" defer></script>
     <script th:src="@{/js/toggleProfilePhoto.js}" defer></script>
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
     <script th:src="@{/js/updateChanges.js}" defer></script>
     <script th:src="@{/js/previewFile.js}" defer></script>
-    <script src="/js/backButton.js"></script>
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
+    
   </head>
   <body>
     <header>
@@ -25,44 +27,59 @@
             <button
               id="saveChangesButton"
               type="submit"
-              class=" bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
-              >Save Changes
+              class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
+            >
+              Save Changes
             </button>
           </li>
         </ul>
       </nav>
     </header>
 
-      <div class="profileContainer">
-        <div class="h-auto w-full">
+    <div class="profileContainer">
+      <div class="h-auto w-full">
         <div class="flex flex-col justify-center items-center mt-8 p-2">
           <!-- PROFILE PICTURE -->
           <a>
             <img
-            class="h-32 w-32 rounded-full bg-white"
-            id="previewImage"
-            th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
-            alt="Profile Picture"
+              class="h-32 w-32 rounded-full bg-white"
+              id="previewImage"
+              th:src="${user?.profilePictureUrl ?: '/images/default-profile-photo.png'}"
+              alt="Profile Picture"
             />
           </a>
 
           <!-- UPDATE PROFILE PICTURE BUTTON -->
           <a href="#" id="triggerUpload" class="mt-2">
-            <span class="text-sm font-semibold text-blue-500 mb-1"
-              >Update Profile Picture</span
-            >
+            <span class="text-sm font-semibold text-blue-500 mb-1">
+              Update Profile Picture
+            </span>
           </a>
 
           <div class="errorBox">
             <!-- SUCCESS MESSAGE -->
-            <div id="successMessageDiv" th:if="${message}" th:text="${message}" class="success"></div>
+            <div
+              id="successMessageDiv"
+              th:if="${message}"
+              th:text="${message}"
+              class="success"
+            ></div>
             <!-- ERROR MESSAGE -->
-            <div id="errorMessageDiv" th:if="${error}" th:text="${error}" class="failure"></div>
+            <div
+              id="errorMessageDiv"
+              th:if="${error}"
+              th:text="${error}"
+              class="failure"
+            ></div>
           </div>
-
         </div>
         <div class="flex-col justify-center items-center">
-          <form th:action="@{/update_profile}" method="post" enctype="multipart/form-data" id="updateProfileForm">
+          <form
+            th:action="@{/update_profile}"
+            method="post"
+            enctype="multipart/form-data"
+            id="updateProfileForm"
+          >
             <!-- Update Profile Picture -->
             <div class="labelInputBox">
               <input
@@ -73,26 +90,61 @@
                 accept="image/*"
               />
             </div>
-          
+
             <!-- Location -->
             <div class="grid grid-cols-5 w-full bg-white">
-              <span class="text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Location</span>
-              <input id="locationInput" class="col-span-4 text-sm p-2 border-y border-slate-200" name="location" th:value="${user?.location ?: ''}" placeholder="Location" />
+              <span
+                class="text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200"
+              >
+                Location
+              </span>
+              <input
+                id="locationInput"
+                class="col-span-4 text-sm p-2 border-y border-slate-200"
+                name="location"
+                th:value="${user?.location ?: ''}"
+                placeholder="Location"
+              />
             </div>
-          
+
             <!-- Website -->
             <div class="grid grid-cols-5 w-full bg-white">
-              <span class="text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Website</span>
-              <input id="websiteInput" class="col-span-4 text-sm p-2 border-y border-slate-200" name="website" th:value="${user?.website ?: ''}" placeholder="Website" />
+              <span
+                class="text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200"
+              >
+                Website
+              </span>
+              <input
+                id="websiteInput"
+                class="col-span-4 text-sm p-2 border-y border-slate-200"
+                name="website"
+                th:value="${user?.website ?: ''}"
+                placeholder="Website"
+              />
             </div>
-          
+
             <!-- Biography -->
             <div class="grid grid-cols-5 w-full bg-white">
-              <span class="text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Biography</span>
-              <textarea id="biographyInput" class="col-span-4 text-sm p-2 border-y border-slate-200" name="biography" th:text="${user?.biography ?: ''}" placeholder="Biography" maxlength="250"></textarea>
+              <span
+                class="text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200"
+              >
+                Biography
+              </span>
+              <textarea
+                id="biographyInput"
+                class="col-span-4 text-sm p-2 border-y border-slate-200"
+                name="biography"
+                th:text="${user?.biography ?: ''}"
+                placeholder="Biography"
+                maxlength="250"
+              ></textarea>
             </div>
-          
-            <button type="submit" id="hiddenSubmitButton" class="hidden"></button>
+
+            <button
+              type="submit"
+              id="hiddenSubmitButton"
+              class="hidden"
+            ></button>
           </form>
         </div>
       </div>
