--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -4,12 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" th:href="@{/css/output.css}" />
-    <script src="/js/visitedPages.js" defer></script>
+    
     <script th:src="@{/js/accountDetails.js}" defer></script>
     <script th:src="@{/js/toggleProfilePhoto.js}" defer></script>
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
     <script th:src="@{/js/updateChanges.js}" defer></script>
-    <script src="/js/backButton.js"></script>
+    
+    <script src="/js/BackButton/visitedPages.js" defer></script>
+
   </head>
   <body>
     <header>
