--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,9 @@
     <script src="/js/toggleCommentIndex.js" defer></script>
     <script src="/js/toggleItemsIndex.js" defer></script>
     <script type="module" src="/js/commentBoxOpenIndex.js"></script>
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // Retrieve the visitedUrls stack from sessionStorage
@@ -34,7 +37,6 @@
         sessionStorage.setItem("visitedUrls", JSON.stringify(visitedUrls));
       });
     </script>
-
 
     <link rel="stylesheet" href="/css/output.css" />
   </head>
@@ -66,7 +68,9 @@
 
     <div class="overflow-auto w-full bg-slate-200">
       <div th:if="${collections.size == 0}">
-        <div class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm">
+        <div
+          class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm"
+        >
           <span class="text-sm font-semibold">No collections yet</span>
         </div>
       </div>
@@ -79,12 +83,18 @@
             th:id="${collection.id}"
           >
             <!-- COLLECTION NAVBAR -->
-            <div th:id="'collection-' + ${collection.id}" class="collectionContainerNavbar collectionNavbar shadow-sm">
+            <div
+              th:id="'collection-' + ${collection.id}"
+              class="collectionContainerNavbar collectionNavbar shadow-sm"
+            >
               <div class="flex justify-between items-center w-full">
                 <div>
                   <ul class="flex justify-start items-center w-full">
                     <li class="pr-2">
-                      <a th:if="${collection.user.id != null}" th:href="@{/profile/{id}(id=${collection.user.id})}">
+                      <a
+                        th:if="${collection.user.id != null}"
+                        th:href="@{/profile/{id}(id=${collection.user.id})}"
+                      >
                         <img
                           class="h-7 w-7 rounded-full bg-white"
                           th:src="${users != null && collection.user.id != null && users[collection.user.id]?.profilePictureUrl != null ? users[collection.user.id].profilePictureUrl : '/images/default-profile-photo.png'}"
@@ -126,11 +136,14 @@
               </a>
 
               <!-- Overlay -->
-              <div class="collectionOverlay overlay absolute bottom-0 left-0 w-full h-full bg-black bg-opacity-70 text-white text-sm p-2 overflow-y-scroll hidden">
+              <div
+                class="collectionOverlay overlay absolute bottom-0 left-0 w-full h-full bg-black bg-opacity-70 text-white text-sm p-2 overflow-y-scroll hidden"
+              >
                 <div class="itemGrid">
-                  <div th:if="${partitionedItemsByCollection != null && collection?.id != null}"
-                  th:each="row : ${partitionedItemsByCollection[collection.id]}"
-                  class="grid grid-cols-3"
+                  <div
+                    th:if="${partitionedItemsByCollection != null && collection?.id != null}"
+                    th:each="row : ${partitionedItemsByCollection[collection.id]}"
+                    class="grid grid-cols-3"
                   >
                     <div
                       th:each="item : ${row}"
@@ -162,69 +175,112 @@
             </div>
 
             <!-- COLLECTION CAPTION -->
-            <div class="collectionCaption w-full px-2 shadow-sm border-2 border-slate-100">
+            <div
+              class="collectionCaption w-full px-2 shadow-sm border-2 border-slate-100"
+            >
               <div class="flex flex-row justify-between items-center">
                 <div class="flex flex-row w-full h-auto py-1 text-sm">
                   <ul class="flex flex-row justify-start items-center pr-2">
-
-
-
                     <li class="flex flex-row justify-start items-center pr-2">
                       <div class="flex justify-start items-center">
-                        <form th:if="${collection?.id != null}" th:action="@{/collections/{collectionId}/like-from-index (collectionId=${collection.id})}" method="post">
-    
-                          <input type="hidden" name="collectionId" th:value="${collection.id}" />
-                          <input type="hidden" name="userId" th:value="${user.id}" />
-                          <input type="hidden" name="liked" th:value="${collection.isLiked}" />
-    
-                          <button type="submit" class="likeButton" th:if="${collection.user.id != user.id}">
-                            <span class="pr-2 font-medium" th:if="${collection?.isLiked}">&#9829;</span>
-                            <span class="pr-2 font-medium" th:if="${collection?.isLiked != null && !collection.isLiked}">&#9825;</span>
+                        <form
+                          th:if="${collection?.id != null}"
+                          th:action="@{/collections/{collectionId}/like-from-index (collectionId=${collection.id})}"
+                          method="post"
+                        >
+                          <input
+                            type="hidden"
+                            name="collectionId"
+                            th:value="${collection.id}"
+                          />
+                          <input
+                            type="hidden"
+                            name="userId"
+                            th:value="${user.id}"
+                          />
+                          <input
+                            type="hidden"
+                            name="liked"
+                            th:value="${collection.isLiked}"
+                          />
+
+                          <button
+                            type="submit"
+                            class="likeButton"
+                            th:if="${collection.user.id != user.id}"
+                          >
+                            <span
+                              class="pr-2 font-medium"
+                              th:if="${collection?.isLiked}"
+                            >
+                              &#9829;
+                            </span>
+                            <span
+                              class="pr-2 font-medium"
+                              th:if="${collection?.isLiked != null && !collection.isLiked}"
+                            >
+                              &#9825;
+                            </span>
                           </button>
-                          <button type="button" class="likeButton" th:if="${collection.user.id == user.id}" disabled>
-                            <span class="pr-2 font-medium"  th:text="${collection?.likeCount ?: 0}">&#9829;</span>
+                          <button
+                            type="button"
+                            class="likeButton"
+                            th:if="${collection.user.id == user.id}"
+                            disabled
+                          >
+                            <span
+                              class="pr-2 font-medium"
+                              th:text="${collection?.likeCount ?: 0}"
+                            >
+                              &#9829;
+                            </span>
                           </button>
-    
                         </form>
                       </div>
                       <div class="flex justify-start items-center">
-                        <p class="font-thin" th:text="${collection.likeCount ?: 0}"></p>
+                        <p
+                          class="font-thin"
+                          th:text="${collection.likeCount ?: 0}"
+                        ></p>
                       </div>
                     </li>
 
-
-
                     <li class="flex flex-row justify-start items-center pr-2">
                       <a
-                        th:if="${collection.id != null}" th:id="'commentToggle-' + ${collection.id}"
+                        th:if="${collection.id != null}"
+                        th:id="'commentToggle-' + ${collection.id}"
                         class="commentToggle cursor-pointer"
                         th:attr="data-collection-id=${collection.id}"
                         onclick="passCollectionId(this.getAttribute('data-collection-id'))"
-                        >
+                      >
                         <!-- onclick trigger the comment activity box to have the collection id -->
                         <span
-                        th:id="'collectionCommentButton-' + ${collection.id}"
+                          th:id="'collectionCommentButton-' + ${collection.id}"
                           class="collectionCommentButton pr-2 font-medium"
                         >
                           comment
                         </span>
                       </a>
-                        <span class="font-thin" th:text="${collection.commentCount ?: 0}"></span>
+                      <span
+                        class="font-thin"
+                        th:text="${collection.commentCount ?: 0}"
+                      ></span>
                     </li>
                   </ul>
                 </div>
 
                 <!-- COMMENT BOX EXIT -->
-                <div 
-                  id="collectionCommentBoxExit" th:id="'collectionCommentBoxExit-' + ${collection.id}"
-                  class="collectionCommentBoxExit hidden">
+                <div
+                  id="collectionCommentBoxExit"
+                  th:id="'collectionCommentBoxExit-' + ${collection.id}"
+                  class="collectionCommentBoxExit hidden"
+                >
                   <a>
                     <span class="font-semibold">X</span>
                   </a>
                 </div>
               </div>
 
-              
               <div>
                 <div
                   class="w-full h-auto flex justify-start items-center text-sm"
@@ -271,9 +327,11 @@
               class="collectionCommentBox hidden mt-2"
               th:attr="data-collection-id=${collection.id}"
             >
-
               <!-- Comment Template -->
-              <div class="px-3 pt-1 pb-2" th:each="comment : ${collection.comments}">
+              <div
+                class="px-3 pt-1 pb-2"
+                th:each="comment : ${collection.comments}"
+              >
                 <div
                   class="w-full h-auto flex flex-row justify-start items-start text-sm"
                 >
@@ -296,7 +354,10 @@
                     <div class="flex flex-row justify-start items-start w-full">
                       <!-- Profile Link -->
                       <div class="flex items-start">
-                        <a th:href="@{/profile/{id}(id=${comment.user.id})}" class="flex items-start">
+                        <a
+                          th:href="@{/profile/{id}(id=${comment.user.id})}"
+                          class="flex items-start"
+                        >
                           <span
                             style="font-size: 10px; line-height: 1"
                             class="font-semibold leading-[1]"
@@ -311,9 +372,8 @@
                         <span
                           style="font-size: 8px; line-height: 1"
                           class="font-thin leading-[1]"
-
                         >
-                        6h
+                          6h
                         </span>
                       </div>
                     </div>
@@ -335,45 +395,82 @@
                       </a>
                     </div>
 
-    <!-- REPLY BOX GOES HERE -->
-
-
-                </div>
-                <!-- Like Box -->
-                <div
-                th:id="'likeBox-' + ${comment.id}"
-                class="flex flex-col justify-start items-center"
-              >
-                  <div class="flex flex-row justify-center items-center">
-                    <form th:if="${comment?.id != null}" th:action="@{/comments/{id}/like(id=${comment?.id})}" method="post">
-                      <input type="hidden" name="commentId" th:value="${comment.id}" />
-                      <input type="hidden" name="userId" th:value="${user.id}" />
-                      <input type="hidden" name="liked" th:value="${comment.isLiked}" />
-                      <button type="submit" class="likeButton" th:if="${comment.user != null && comment.user.id != user.id}">
-                        <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${comment.isLiked}">&#9829;</span>
-                        <span style="font-size: 10px; line-height: 1" class="font-medium text-xs" th:if="${!comment.isLiked}">&#9825;</span>
-                      </button>
-                      <button th:id="'like-button-' + ${comment.id}" type="button" class="likeButton" th:if="${comment.user != null && comment.user.id == user.id}" disabled>
-                        <span style="font-size: 10px; line-height: 1" class="font-medium text-xs">&#9829;</span>
-                      </button>
-                    </form>
+                    <!-- REPLY BOX GOES HERE -->
                   </div>
-  
-                  <div class="flex flex-row justify-center items-center">
-                    <p  th:id="'likeCount-' + ${comment.id}"
+                  <!-- Like Box -->
+                  <div
+                    th:id="'likeBox-' + ${comment.id}"
+                    class="flex flex-col justify-start items-center"
+                  >
+                    <div class="flex flex-row justify-center items-center">
+                      <form
+                        th:if="${comment?.id != null}"
+                        th:action="@{/comments/{id}/like(id=${comment?.id})}"
+                        method="post"
+                      >
+                        <input
+                          type="hidden"
+                          name="commentId"
+                          th:value="${comment.id}"
+                        />
+                        <input
+                          type="hidden"
+                          name="userId"
+                          th:value="${user.id}"
+                        />
+                        <input
+                          type="hidden"
+                          name="liked"
+                          th:value="${comment.isLiked}"
+                        />
+                        <button
+                          type="submit"
+                          class="likeButton"
+                          th:if="${comment.user != null && comment.user.id != user.id}"
+                        >
+                          <span
+                            style="font-size: 10px; line-height: 1"
+                            class="font-medium text-xs"
+                            th:if="${comment.isLiked}"
+                          >
+                            &#9829;
+                          </span>
+                          <span
+                            style="font-size: 10px; line-height: 1"
+                            class="font-medium text-xs"
+                            th:if="${!comment.isLiked}"
+                          >
+                            &#9825;
+                          </span>
+                        </button>
+                        <button
+                          th:id="'like-button-' + ${comment.id}"
+                          type="button"
+                          class="likeButton"
+                          th:if="${comment.user != null && comment.user.id == user.id}"
+                          disabled
+                        >
+                          <span
+                            style="font-size: 10px; line-height: 1"
+                            class="font-medium text-xs"
+                          >
+                            &#9829;
+                          </span>
+                        </button>
+                      </form>
+                    </div>
+
+                    <div class="flex flex-row justify-center items-center">
+                      <p
+                        th:id="'likeCount-' + ${comment.id}"
                         style="font-size: 10px; line-height: 1"
-                        class="font-thin text-xs" th:text="${comment.likeCount != null ? comment.likeCount : '0'}"></p>
+                        class="font-thin text-xs"
+                        th:text="${comment.likeCount != null ? comment.likeCount : '0'}"
+                      ></p>
+                    </div>
                   </div>
-  
                 </div>
               </div>
-
-              </div>
-
-
-
-
-
             </div>
           </div>
         </div>
@@ -393,9 +490,7 @@
             </li>
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/popular">
-                  &#10066;
-               </a>
+                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
               </div>
             </li>
             <li>
@@ -417,9 +512,7 @@
           </ul>
         </div>
 
-
         <!-- COMMENT FOOTER -->
-
 
         <div id="commentActivity" class="commentNav hidden">
           <div id="commentInputContainer" class="w-full">
@@ -435,14 +528,25 @@
                   alt="Profile Picture"
                 />
               </a>
-              <input class="commentFormCollectionIdInput" type="hidden" name="collectionId" th:value="${collection?.id ?: ''}" />
+              <input
+                class="commentFormCollectionIdInput"
+                type="hidden"
+                name="collectionId"
+                th:value="${collection?.id ?: ''}"
+              />
               <input
                 type="text"
                 name="content"
                 placeholder="Leave a comment..."
                 class="w-full border-none outline-none focus:ring-0 text-sm font-thin bg-slate-100 rounded-md px-2 py-1 mx-2"
               />
-              <button id="commentButton" type="submit" class="text-sm bg-blue-500 text-white font-semibold text-center h-full w-7"><span>C</span></button>
+              <button
+                id="commentButton"
+                type="submit"
+                class="text-sm bg-blue-500 text-white font-semibold text-center h-full w-7"
+              >
+                <span>C</span>
+              </button>
             </form>
           </div>
         </div>
