--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/output.css" />
-    <script src="/js/visitedPages.js" defer></script>
+
     <script src="/js/fadeAnimations.js" defer></script>
     <script src="/js/toggleTruncate.js" defer></script>
     <script src="/js/toggleOverlay.js" defer></script>
@@ -12,7 +12,10 @@
     <script src="/js/toggleCommentBoxItem.js" defer></script>
     <script src="/js/commentBoxOpen.js" defer></script>
     <script src="/js/toggleReply.js" defer></script>
-    <script src="/js/backButton.js"></script>
+
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
+
   </head>
 
   <body>
