--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Login</title>
-    <script src="/js/visitedPages.js" defer></script>
+
     <script th:src="@{/js/previewFile.js}" defer></script>
-    <script src="/js/backButton.js"></script>
+
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
 
     <link rel="stylesheet" href="/css/output.css" />
   </head>
