--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8" />
 
     <title>Login</title>
-    <script src="/js/visitedPages.js" defer></script>
+
     <script th:src="@{/js/previewFile.js}" defer></script>
-    <script src="/js/backButton.js"></script>
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
 
     <link rel="stylesheet" href="/css/output.css" />
   </head>
@@ -44,9 +45,9 @@
           alt="Collection Image"
         />
         <a href="#" id="triggerUpload" class="mt-2">
-          <span class="text-sm font-semibold text-blue-500"
-            >Update Item Image</span
-          >
+          <span class="text-sm font-semibold text-blue-500">
+            Update Item Image
+          </span>
         </a>
       </div>
       <!-- ERROR / SUCCESS -->
@@ -66,107 +67,107 @@
           style="color: red"
         ></div>
       </div>
-      
+
       <div class="scrollable-container h-100vh">
         <form
-        class="flex flex-col w-full items-center justify-center px-2"
-        th:action="@{/update-item/{id}(id=${item.id})}"
-        method="post"
-        enctype="multipart/form-data"
-      >
-        <input type="hidden" name="collectionId" th:value="${collectionId}" />
-        <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-      
-        <!-- File Upload Field -->
-        <input
-          type="file"
-          id="hiddenFileInput"
-          name="itemImage"
-          style="display: none"
-          accept="image/*"
-        />
-      
-        <!-- Title Field -->
-        <div class="labelInputBox w-full">
-          <label class="label" for="title">Title:</label>
+          class="flex flex-col w-full items-center justify-center px-2"
+          th:action="@{/update-item/{id}(id=${item.id})}"
+          method="post"
+          enctype="multipart/form-data"
+        >
+          <input type="hidden" name="collectionId" th:value="${collectionId}" />
+          <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+
+          <!-- File Upload Field -->
           <input
-            class="input w-full"
-            type="text"
-            id="itemTitle"
-            name="title"
-            th:value="${item?.title}"
-            placeholder="Title"
+            type="file"
+            id="hiddenFileInput"
+            name="itemImage"
+            style="display: none"
+            accept="image/*"
           />
-        </div>
-      
-        <!-- Description Field -->
-        <div class="labelInputBox w-full">
-          <label class="label" for="description">Description:</label>
-          <textarea
-            class="input w-full"
-            id="description"
-            name="description"
-            th:text="${item?.description}"
-            placeholder="Description"
-            rows="6"
-            maxlength="255"
-          ></textarea>
-        </div>
-      
-        <!-- Item Link Field -->
-        <div class="labelInputBox w-full">
-          <label class="label" for="itemLink">Item Link:</label>
-          <input
-            class="input w-full"
-            type="text"
-            id="itemLink"
-            name="itemLink"
-            th:value="${item?.itemLink}"
-            placeholder="http://example.com"
-          />
-        </div>
-      
-        <!-- Caption Field -->
-        <div class="labelInputBox w-full">
-          <label class="label" for="caption">Caption:</label>
-          <input
-            class="input w-full"
-            type="text"
-            id="caption"
-            name="caption"
-            th:value="${item?.caption}"
-            placeholder="Caption"
-          />
-        </div>
-      
-        <!-- Submit Button -->
-        <div class="flex flex-row justify-center items-center">
-          <button
-            class="deleteButton bg-blue-600 hover:bg-blue-800"
-            type="submit"
-          >
-            Update Item
-          </button>
-        </div>
-      </form>
-      <form
-        class="flex flex-col w-full items-center justify-center px-2 bg-white"
-        th:action="@{/delete-item/{id}(id=${item.id})}"
-        method="post"
-        enctype="multipart/form-data"
-      >
-        <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-        <div class="flex flex-row justify-center items-center">
-          <button
-            class="deleteButton bg-red-600 hover:bg-red-800"
-            type="submit"
-            onclick="return confirm('Are you sure you want to delete this item? This action cannot be undone.');"
-          >
-            Delete Item
-          </button>
-        </div>
-      </form>
-    </div>
+
+          <!-- Title Field -->
+          <div class="labelInputBox w-full">
+            <label class="label" for="title">Title:</label>
+            <input
+              class="input w-full"
+              type="text"
+              id="itemTitle"
+              name="title"
+              th:value="${item?.title}"
+              placeholder="Title"
+            />
+          </div>
+
+          <!-- Description Field -->
+          <div class="labelInputBox w-full">
+            <label class="label" for="description">Description:</label>
+            <textarea
+              class="input w-full"
+              id="description"
+              name="description"
+              th:text="${item?.description}"
+              placeholder="Description"
+              rows="6"
+              maxlength="255"
+            ></textarea>
+          </div>
+
+          <!-- Item Link Field -->
+          <div class="labelInputBox w-full">
+            <label class="label" for="itemLink">Item Link:</label>
+            <input
+              class="input w-full"
+              type="text"
+              id="itemLink"
+              name="itemLink"
+              th:value="${item?.itemLink}"
+              placeholder="http://example.com"
+            />
+          </div>
+
+          <!-- Caption Field -->
+          <div class="labelInputBox w-full">
+            <label class="label" for="caption">Caption:</label>
+            <input
+              class="input w-full"
+              type="text"
+              id="caption"
+              name="caption"
+              th:value="${item?.caption}"
+              placeholder="Caption"
+            />
+          </div>
+
+          <!-- Submit Button -->
+          <div class="flex flex-row justify-center items-center">
+            <button
+              class="deleteButton bg-blue-600 hover:bg-blue-800"
+              type="submit"
+            >
+              Update Item
+            </button>
+          </div>
+        </form>
+        <form
+          class="flex flex-col w-full items-center justify-center px-2 bg-white"
+          th:action="@{/delete-item/{id}(id=${item.id})}"
+          method="post"
+          enctype="multipart/form-data"
+        >
+          <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+          <div class="flex flex-row justify-center items-center">
+            <button
+              class="deleteButton bg-red-600 hover:bg-red-800"
+              type="submit"
+              onclick="return confirm('Are you sure you want to delete this item? This action cannot be undone.');"
+            >
+              Delete Item
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
   </body>
 </html>
