--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -1,13 +1,14 @@
-
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="/css/output.css" />
-    <script src="/js/visitedPages.js" defer></script>
+
     <script src="/js/fadeAnimations.js" defer></script>
-    <script src="/js/backButton.js"></script>
+
+    <script src="/js/BackButton/visitedPages.js" defer></script>
+    
   </head>
   <body>
     <header>
@@ -20,11 +21,10 @@
           </li>
           <li class="flex items-center">
             <h2
-            th:text="${userProfile?.username != null ? userProfile.username : 'User Profile'}"
+              th:text="${userProfile?.username != null ? userProfile.username : 'User Profile'}"
             ></h2>
           </li>
-          <li class="flex items-center">
-          </li>
+          <li class="flex items-center"></li>
         </ul>
       </nav>
     </header>
@@ -46,25 +46,30 @@
             </div>
             <!-- Collections -->
             <div class="flex flex-col justify-center items-center">
-              <h2 class="text-sm font-bold" th:text="${collectionCount ?: '0'}"></h2>
+              <h2
+                class="text-sm font-bold"
+                th:text="${collectionCount ?: '0'}"
+              ></h2>
               <p class="text-xs">collections</p>
             </div>
 
             <!-- Followers -->
             <div class="flex flex-col justify-center items-center">
               <a
-              th:href="@{/profile/{id}/followers(id=${userProfile?.id})}"
-              class="text-sm font-bold"
-              th:text="${followersCount ?: '0'}"></a>
+                th:href="@{/profile/{id}/followers(id=${userProfile?.id})}"
+                class="text-sm font-bold"
+                th:text="${followersCount ?: '0'}"
+              ></a>
               <p class="text-xs">followers</p>
             </div>
-            
+
             <!-- Following -->
             <div class="flex flex-col justify-center items-center">
               <a
                 th:href="@{/profile/{id}/following(id=${userProfile?.id})}"
                 class="text-sm font-bold"
-                th:text="${followingCount ?: '0'}"></a>
+                th:text="${followingCount ?: '0'}"
+              ></a>
               <p class="text-xs">following</p>
             </div>
           </div>
@@ -116,31 +121,38 @@
             <form
               th:action="@{/follow/{id}(id=${userProfile?.id})}"
               class="deleteButton bg-slate-400 hover:bg-slate-400 flex item-center justify-center col-span-2"
-              method="post">
-                <button type="submit">Follow</button>
+              method="post"
+            >
+              <button type="submit">Follow</button>
             </form>
           </div>
 
           <div th:if="${isFollowing}">
-              <form
-                th:action="@{/unfollow/{id}(id=${userProfile?.id})}"
-                class="deleteButton bg-blue-500 hover:bg-blue-700 flex item-center justify-center col-span-2"
-                method="post">
-                  <button type="submit">Following</button>
-              </form>
+            <form
+              th:action="@{/unfollow/{id}(id=${userProfile?.id})}"
+              class="deleteButton bg-blue-500 hover:bg-blue-700 flex item-center justify-center col-span-2"
+              method="post"
+            >
+              <button type="submit">Following</button>
+            </form>
           </div>
         </div>
-
       </div>
       <div class="w-full min-h-fit overflow-y-auto">
         <div class="grid">
-          <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3 border-0">
-            <div th:each="collection : ${row}" class="flex flex-col items-center">
+          <div
+            th:each="row : ${partitionedCollections}"
+            class="grid grid-cols-3 border-0"
+          >
+            <div
+              th:each="collection : ${row}"
+              class="flex flex-col items-center"
+            >
               <a th:href="@{/collection/{id}(id=${collection.id})}">
                 <img
-                th:src="${#strings.defaultString(collection?.getImageUrl(), '/images/default-image.png')}"
-                alt="Collection Image"
-                class="aspect-square w-full h-auto object-cover"
+                  th:src="${#strings.defaultString(collection?.getImageUrl(), '/images/default-image.png')}"
+                  alt="Collection Image"
+                  class="aspect-square w-full h-auto object-cover"
                 />
               </a>
             </div>
@@ -149,21 +161,19 @@
       </div>
     </div>
     <footer>
-      <div class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center">
+      <div
+        class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
+      >
         <div class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/index">
-                  &#8962;
-                </a>
+                <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/popular">
-                  &#10066;
-                </a>
+                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
               </div>
             </li>
             <li>
