back button and home button fully functional

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -289,10 +289,8 @@
             <!-- Footer for owner -->
             <ul class="flex justify-between items-center w-full" id="footerNavOwner">
               <li>
-                <div class="h-4 w-4 flex items-center justify-center">
-                  <a class="text-2xl font-bold" href="/index">
-                    &#8962;
-                  </a>
+                <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
+                  <a class="text-2xl font-bold" href="/index">&#8962;</a>
                 </div>
               </li>
               <li>
