--- a/src/main/resources/templates/popular.html
+++ b/src/main/resources/templates/popular.html
@@ -8,7 +8,7 @@
     <script src="/js/fadeAnimations.js" defer></script>
 
     <script src="/js/BackButton/visitedPages.js" defer></script>
-    
+
   </head>
   <body>
     <header>
@@ -160,7 +160,7 @@
         <div class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
-              <div class="h-4 w-4 flex items-center justify-center">
+              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
