--- a/src/main/resources/templates/followingList.html
+++ b/src/main/resources/templates/followingList.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/output.css" />
 
     <script src="/js/BackButton/visitedPages.js" defer></script>
-    
+
   </head>
   <body>
     <header>
@@ -66,7 +66,7 @@
         <div class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
-              <div class="h-4 w-4 flex items-center justify-center">
+              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
