--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,13 +45,14 @@
       <nav class="navbar">
         <ul class="flex justify-between items-center w-full">
           <li>
-            <a href="/index">
-              <img
+            <div id="logoHomeButton">
+              <a href="/index">
+                <img
                 class="h-5"
                 src="/images/Shelved_Logo_White.png"
-                alt="Shelved Logo"
-              />
-            </a>
+                alt="Shelved Logo"/>
+              </a>
+            </div>
           </li>
           <li>
             <a href="/profile">
@@ -484,7 +485,7 @@
         <div id="footerNavContent" class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
-              <div class="h-4 w-4 flex items-center justify-center">
+              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
