--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -332,7 +332,7 @@
         <div id="footerNavContent" class="footerNav">
           <ul class="flex justify-between items-center w-full">
             <li>
-              <div class="h-4 w-4 flex items-center justify-center">
+              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
               </div>
             </li>
